[package]
name = "rayleigh"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["rayleigh", "dimensional analysis", "units", "physics", "engineering"]
documentation = "https://docs.rs/rayleigh"
homepage = "https://github.com/thomasMilesTgm/rayleigh"
description = "A library for dimensional analysis"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
