[package]
name = "rayleigh"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["rayleigh", "dimensional", "units", "physics", "engineering"]
documentation = "https://docs.rs/rayleigh"
homepage = "https://github.com/thomasMilesTgm/rayleigh"
repository = "https://github.com/thomasMilesTgm/rayleigh"
readme = "../README.md"
workspace = "../"
description = "A library for dimensional analysis"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.11"
nalgebra = "0.33.0"
ordered-float = "4.2.2"
thiserror = "2.0.9"
